--- a/views/index.html
+++ b/views/index.html
@@ -4,27 +4,51 @@
 
 <div ng-app='myApp' ng-controller="mainCtrl">
   <div class='row' style='margin-top: 50px'>
-    <div class='col-md-2 col-lg-4'>
-      <img class='img' src='../img/trump.png'>
-    </div>
-    <div class='col-md-4 col-lg-8'>
-      <span class='name'>#Trump</span>
+    <div class='col-md-4'>
+      <span class='name text-center'>#Brexit</span>
       <canvas id="trump" class="chart chart-doughnut"
-      chart-colours='colors' chart-legend="true"
-      chart-data="trumpData" chart-labels="labels">
-    </canvas>
+        chart-colours='colors' chart-legend="true"
+        chart-data="brexitData" chart-labels="labels">
+      </canvas>
+    </div>
+    <div class='col-md-4'>
+      <span class='name text-center'>#Rio2016</span>
+      <canvas id="sanders" class="chart chart-doughnut"
+        chart-colours='colors' chart-legend="true"
+        chart-data="rioData" chart-labels="labels">
+      </canvas>
+    </div>
+    <div class='col-md-4'>
+      <span class='name text-center'>#Hillary </span>
+      <canvas id="hillary" class="chart chart-doughnut"
+        chart-colours='colors' chart-legend="true"
+        chart-data="hillaryData" chart-labels="labels">
+      </canvas>
+    </div>
   </div>
-  <div class='col-md-2 col-lg-4'>
-    <img class='img' src='../img/sanders.png'>
+  <div class='row' style='margin-top: 50px'>
+    <div class='col-md-4'>
+      <span class='name text-center'>#Trump</span>
+        <canvas id="trump" class="chart chart-doughnut"
+          chart-colours='colors' chart-legend="true"
+          chart-data="trumpData" chart-labels="labels">
+        </canvas>
+    </div>
+    <div class='col-md-4'>
+      <span class='name text-center'>#DNC</span>
+      <canvas id="trump" class="chart chart-doughnut"
+        chart-colours='colors' chart-legend="true"
+        chart-data="dncData" chart-labels="labels">
+      </canvas>
+    </div>
+    <div class='col-md-4'>
+      <span class='name text-center'>#EU</span>
+      <canvas id="trump" class="chart chart-doughnut"
+        chart-colours='colors' chart-legend="true"
+        chart-data="euData" chart-labels="labels">
+      </canvas>
+    </div>
   </div>
-  <div class='col-md-4 col-lg-8'>
-    <span class='name'>#FeelTheBern</span>
-    <canvas id="sanders" class="chart chart-doughnut"
-    chart-colours='colors' chart-legend="true"
-    chart-data="sandersData" chart-labels="labels">
-  </canvas>
-</div>
-</div>
 <br><br>
 <div class='row'>
   <div class="col-md-12">
